// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SimpleImg should apply aspect ratio when height and width is supplied 1`] = `
<div
  className="className"
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "column",
      "height": 1,
      "justifyContent": "center",
      "overflow": "hidden",
      "position": "relative",
      "visibility": "hidden",
    }
  }
>
  <noscript>
    <img
      alt="alt"
      src="src"
    />
  </noscript>
  <img
    alt="alt"
    data-src="src"
    data-srcset="srcSet"
    sizes="sizes"
    src="data:image/gif;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs="
    srcSet=""
    style={
      Object {
        "visibility": "hidden",
        "width": "100%",
      }
    }
  />
  <div
    style={
      Object {
        "background": "white",
        "height": "100%",
        "left": 0,
        "position": "absolute",
        "top": 0,
        "transition": "1s opacity",
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`SimpleImg should render background color 1`] = `
<div
  className="className"
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "column",
      "height": 1,
      "justifyContent": "center",
      "overflow": "hidden",
      "position": "relative",
      "visibility": "hidden",
    }
  }
>
  <noscript>
    <img
      alt="alt"
      src="src"
    />
  </noscript>
  <img
    alt="alt"
    data-src="src"
    data-srcset="srcSet"
    sizes="sizes"
    src="data:image/gif;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs="
    srcSet=""
    style={
      Object {
        "visibility": "hidden",
        "width": "100%",
      }
    }
  />
  <div
    style={
      Object {
        "background": "red",
        "height": "100%",
        "left": 0,
        "position": "absolute",
        "top": 0,
        "transition": "1s opacity",
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`SimpleImg should render correctly 1`] = `
<div
  className="className"
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "column",
      "height": 1,
      "justifyContent": "center",
      "overflow": "hidden",
      "position": "relative",
      "visibility": "hidden",
    }
  }
>
  <noscript>
    <img
      alt="alt"
      src="src"
    />
  </noscript>
  <img
    alt="alt"
    data-src="src"
    data-srcset="srcSet"
    sizes="sizes"
    src="data:image/gif;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs="
    srcSet=""
    style={
      Object {
        "visibility": "hidden",
        "width": "100%",
      }
    }
  />
  <div
    style={
      Object {
        "background": "white",
        "height": "100%",
        "left": 0,
        "position": "absolute",
        "top": 0,
        "transition": "1s opacity",
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`SimpleImg should render correctly when placeholder set to false 1`] = `
Array [
  <noscript>
    <img
      alt="alt"
      src="src"
    />
  </noscript>,
  <img
    alt="alt"
    className="className"
    data-placeholder="false"
    data-src="src"
    data-srcset="srcSet"
    sizes="sizes"
    src="data:image/gif;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs="
    srcSet=""
    style={
      Object {
        "opacity": 0,
        "transition": "1s opacity",
      }
    }
  />,
]
`;

exports[`SimpleImg should render only span when place holder src is not supplied 1`] = `
<div
  className="className"
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "column",
      "height": 1,
      "justifyContent": "center",
      "overflow": "hidden",
      "position": "relative",
      "visibility": "hidden",
    }
  }
>
  <noscript>
    <img
      alt="alt"
      src="src"
    />
  </noscript>
  <img
    alt="alt"
    data-src="src"
    data-srcset="srcSet"
    sizes="sizes"
    src="data:image/gif;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs="
    srcSet=""
    style={
      Object {
        "visibility": "hidden",
        "width": "100%",
      }
    }
  />
  <div
    style={
      Object {
        "background": "white",
        "height": "100%",
        "left": 0,
        "position": "absolute",
        "top": 0,
        "transition": "1s opacity",
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`SimpleImg should render out as image data 1`] = `
<div
  className="className"
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "column",
      "height": 1,
      "justifyContent": "center",
      "overflow": "hidden",
      "position": "relative",
      "visibility": "hidden",
    }
  }
>
  <noscript>
    <img
      alt="alt"
      src="src"
    />
  </noscript>
  <img
    alt="alt"
    data-src="src"
    data-srcset="srcSet"
    sizes="sizes"
    src="data:image//test"
    srcSet=""
    style={
      Object {
        "width": "100%",
      }
    }
  />
  <img
    sizes="sizes"
    src="data:image//test"
    style={
      Object {
        "height": "100%",
        "left": 0,
        "position": "absolute",
        "top": 0,
        "transition": "1s opacity",
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`SimpleImg should render out placeholder as image 1`] = `
<div
  className="className"
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "column",
      "height": 1,
      "justifyContent": "center",
      "overflow": "hidden",
      "position": "relative",
      "visibility": "hidden",
    }
  }
>
  <noscript>
    <img
      alt="alt"
      src="src"
    />
  </noscript>
  <img
    alt="alt"
    data-src="src"
    data-srcset="srcSet"
    sizes="sizes"
    src="/test/image.jpg"
    srcSet=""
    style={
      Object {
        "width": "100%",
      }
    }
  />
  <img
    sizes="sizes"
    src="/test/image.jpg"
    style={
      Object {
        "height": "100%",
        "left": 0,
        "position": "absolute",
        "top": 0,
        "transition": "1s opacity",
        "width": "100%",
      }
    }
  />
</div>
`;
